--- a/starbear/bare-template.html
+++ b/starbear/bare-template.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
-        <script>BEAR_ROUTE = '{{route}}';</script>
-        <script src="{{asset:base-lib.js}}"></script>
+        <script type="module">
+            import { Starbear } from "{{asset:bearlib.js}}";
+            let bear = new Starbear("{{route}}");
+            window.$$BEAR = bear;
+        </script>
     </head>
     <body>
         {{body}}
