--- a/starbear/base-template.html
+++ b/starbear/base-template.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
+        <title>{{title}}</title>
         <script type="module">
             import { Starbear } from "{{asset:bearlib.js}}";
             let bear = new Starbear("{{route}}");
