--- a/starbear/base-template.html
+++ b/starbear/base-template.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
         <title>{{title}}</title>
         <script type="module">
-            import { Starbear } from "{{asset:bearlib.js}}";
+            import { Starbear } from "{{std:bearlib.js}}";
             let bear = new Starbear("{{route}}");
             window.$$BEAR = bear;
             bear.connect();
