--- a/starbear/base-template.html
+++ b/starbear/base-template.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
         <title>{{title}}</title>
+        <link rel="stylesheet" href="{{std:bearstyle.css}}">
         <script type="module">
             import { Starbear } from "{{std:bearlib.js}}";
             let bear = new Starbear("{{route}}");
