--- a/src/starbear/bearlib-template.html
+++ b/src/starbear/bearlib-template.html
@@ -1,8 +1,8 @@
 <inline>
     <link rel="stylesheet" href="{{std:bearstyle.css}}" />
     <script type="module">
-        import { Starbear } from "{{std:bearlib.js}}";
-        let bear = new Starbear("{{route}}");
+        import Constructor from "{{std:bearlib.js}}";
+        let bear = new Constructor("{{route}}");
         window.$$BEAR = bear;
         {{connect_line}};
     </script>
