--- a/src/starbear/page-template.html
+++ b/src/starbear/page-template.html
@@ -4,10 +4,12 @@
         <meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
         <meta name="viewport" content="width=device-width" initial-scale="1" />
         <title>{{title}}</title>
+        {{resources}}
         {{bearlib}}
     </head>
     <body>
         {{dev}}
         {{body}}
+        {{extra}}
     </body>
 </html>
